# Opengles_OpenCV_Lean

./: opengl学习问题  settings.gradle
OpenCVNative/: build.gradle
OpenCVNative/src/main/: AndroidManifest.xml
OpenCVNative/src/main/cpp/: CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  bitmap_utils.h  native-lib.cpp
animatormodule/: build.gradle
animatormodule/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 35911_gray.fsh.glsl  black_white.fsh.glsl  chu_qiao.fsh.glsl  dian_zhen.fsh.glsl  er_fen.fsh.glsl  fupian.fsh.glsl  glline.fsh.glsl  glline.vsh.glsl  guang_zhao.fsh.glsl  huaijiu.fsh.glsl  img_he.fsh.glsl  jia_dian.fsh.glsl  ju_bu_msk.fsh.glsl  lengdiao.fsh.glsl  liunian.fsh.glsl  ma_sai_ke.fsh.glsl  photot_gray.fsh.glsl  pos_dis.fsh.glsl  san_fen.fsh.glsl  sanjiao.vsh.glsl  si_fen.fsh.glsl  si_fen_dis.fsh.glsl  texture.fsh.glsl  texture.vsh.glsl  texture2.fsh.glsl  tietu.fsh.glsl  tietu.vsh.glsl  x_fan.fsh.glsl  xy_fan.fsh.glsl  y_fan.fsh.glsl  zuoyou.fsh.glsl
contentproviderm/: build.gradle
contentproviderm/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
learnNDKMoudle/: build.gradle
learnNDKMoudle/src/main/: AndroidManifest.xml
learnNDKMoudle/src/main/cpp/: CMakeLists.txt  Facer.cpp  Facer.h  toly_facer-lib.cpp
opengl2_0/: build.gradle
opengl2_0/src/main/: AndroidManifest.xml
selfdrawview/: build.gradle
selfdrawview/src/main/: AndroidManifest.xml
videoproject/: build.gradle
videoproject/src/main/: AndroidManifest.xml
(+170 files in other folders)
